Handle potential errors in data-aware item model to prevent nonsensical crashes in item viewer stack batchers